# course-assignment-itzMatze

./: .gitignore
Images/13/: timings.md
Images/14/: timings.md
SourceCode/: CMakeLists.txt
SourceCode/include/: camera.hpp  color.hpp  file_handler.hpp  geometry.hpp  hit_info.hpp  image_factory.hpp  interpolatable_data.hpp  light.hpp  mat.hpp  material.hpp  object.hpp  quat.hpp  ray.hpp  renderer.hpp  scene.hpp  scene_builder.hpp  scene_factory.hpp  scene_file_handler.hpp  spatial_configuration.hpp  triangle.hpp  vec.hpp  vertex.hpp
SourceCode/include/image/: image_factory.hpp  image_file_handler.hpp
SourceCode/include/object/: aabb.hpp  bvh.hpp  geometry.hpp  geometry_builder.hpp  light.hpp  material.hpp  object.hpp  texture.hpp  triangle.hpp  vertex.hpp
SourceCode/include/renderer/: camera.hpp  color.hpp  hit_info.hpp  ray.hpp  renderer.hpp
SourceCode/include/scene/: scene.hpp  scene_builder.hpp  scene_factory.hpp  scene_file_handler.hpp
SourceCode/include/util/: interpolatable_data.hpp  mat.hpp  spatial_configuration.hpp  vec.hpp  vec3.hpp
SourceCode/src/: camera.cpp  color.cpp  file_handler.cpp  geometry.cpp  hw04.cpp  image_factory.cpp  image_file_handler.cpp  light.cpp  main.cpp  material.cpp  object.cpp  random_generator.cpp  ray.cpp  renderer.cpp  scene.cpp  scene_builder.cpp  scene_factory.cpp  scene_file_handler.cpp  spatial_configuration.cpp  triangle.cpp  vec.cpp  vec_perf_test.cpp
SourceCode/src/image/: image_factory.cpp  image_file_handler.cpp
SourceCode/src/object/: aabb.cpp  bvh.cpp  geometry.cpp  geometry_builder.cpp  light.cpp  material.cpp  object.cpp  triangle.cpp
SourceCode/src/renderer/: camera.cpp  ray.cpp  renderer.cpp
SourceCode/src/scene/: scene.cpp  scene_builder.cpp  scene_factory.cpp  scene_file_handler.cpp
SourceCode/src/util/: spatial_configuration.cpp
